   and improved to some extent, but basically defines the same functionality.

--------------------------------------------------------------------------------

#####################################################
Map libraries
#####################################################

--------------------------------------------------------------------------------
vpf library (mixr_map_vpf)

-- Resurrected this old 'map' library for reading vector product map data (vmap) 
--------------------------------------------------------------------------------


#####################################################
Models & general capabilities oriented libraries
#####################################################

--------------------------------------------------------------------------------
models library (mixr_models)

-- Much organization of player folder has been made. This includes the creation
   of additional subfolders to arrange and categorize related types (related in
   terms of 'is-a').  For example, all the classes that were defined AirVehicle
   files were separated into individual files and put into a new 'air' folder.
   This same approach was used for effects, ground vehicles and weapons.
   This organization is undoubtedly not perfect, but its a step towards being more
   understandable, in terms of what is what, and what is available.

-- Renamed 'Buildings' filename to 'Building' to match the class name defined
   within it.

--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
simulation library (mixr_simulation)

   Station class
      1) Renamed 'otw' slot to 'igHosts'.  Use this slot name to define a list,
      of one or more IG host interfaces.  Note, that a list must be provided!

--------------------------------------------------------------------------------